tests/compile_fail/ktstr_test_replicas_zero.stderr
error: replicas must be > 0 (a zero-replica entry runs no scenarios and passes every assertion vacuously)
 --> tests/compile_fail/ktstr_test_replicas_zero.rs:3:1
  |
3 | #[ktstr_test(replicas = 0)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ktstr_test` (in Nightly builds, run with -Z macro-backtrace for more info)
